<resources>
    <string name="app_name">Hora da Gorjeta</string>
    <string name="custo_de_servi_o">Custo de Serviço</string>
    <string name="como_foi_o_servo_o">Como foi o serviço ?</string>
    <string name="incrivel_20">Incrivel (20%)</string>
    <string name="bom_18">Bom (18%)</string>
    <string name="ok_15">OK (15%)</string>
    <string name="dica_de_arredondamento">Fazer um arredondamento ?</string>
    <string name="calculadora">Calculadora</string>
    <string name="valor_da_gorjeta">Valor da gorjeta: R%s</string>
</resources>